<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_shop"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/nav_shop" />
    <item
        android:id="@+id/nav_suggestions"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="@string/nav_suggestions" />
    <item
        android:id="@+id/nav_cart"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_cart" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>

